# mcell

./: .bzrignore  .cproject  .gitignore  .gitmodules  .project  .travis.yml  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  Doxyfile  LICENSE.txt  MANIFEST.in  README.md  appveyor.yml  appveyor_build.py  bintray.json  build_commands.txt  build_gperftools.sh  requirements.py  requirements.txt  setup.py
libmcell/: CMakeLists.txt  replace_in_all_files.sh
libmcell/api/: api_common.h  api_config.h  api_utils.cpp  api_utils.h  api_utils_inc  base_chkpt_mol.h  base_data_class.h  base_export_class.h  base_introspection_class.h  bindings.cpp  bindings.h  bng_converter.cpp  bng_converter.h  bngl_utils.cpp  callbacks.cpp  callbacks.h  callbacks_empty.cpp  checkpoint_signals.cpp  checkpoint_signals.h  chkpt_surf_mol.cpp  chkpt_surf_mol.h  chkpt_vol_mol.cpp  chkpt_vol_mol.h  color.cpp  color.h  common.h  compartment_utils.cpp  compartment_utils.h  complex.cpp  complex.h  complex_instance.cpp  complex_instance.h  component.cpp  component.h  component_instance.cpp  component_instance.h  component_type.cpp  component_type.h  config.h  count.cpp  (+77 more)
libmcell/definition/: callbacks.yaml  checkpointing.yaml  constants.py  constants.yaml  doc.py  gen.py  geometry.yaml  instantiation.yaml  introspection.yaml  model.yaml  observables.yaml  simulation_setup.yaml  submodules.yaml  subsystem.yaml
libmcell/documentation/: api_overview.rst  bngl.rst  build.sh  conf.py  file_formats.rst  howto.txt  index.rst  installation.rst  model_conversions.rst  overview.rst  prerequisites.txt  sim_env_overview.rst
libmcell/examples/: build.sh  gen_release_site.cpp  gen_release_site.h  gen_species.cpp  gen_species.h  test.py
libmcell/generator/: constants.yaml  data_classes.yaml  gen.py  geometry.yaml  instantiation.yaml  introspection.yaml  model.yaml  observables.yaml  simulation_control.yaml  simulation_setup.yaml  subsystem.yaml
libmcell/test/: .gitignore  NOTES.txt  build.sh  geom_object.py  geom_object_error.py  mcell.pyi  run_all.sh  simple_model_obj_rx_rel.py  species_error.py  test.bngl  test.py  test_load_bngl.py  test_model_subsystem.py  test_species_release_site.py  test_species_rxn_simple.py  test_species_rxns.py
libs/bng/: CMakeLists.txt  CODING_STYLE.txt  NOTES.txt  ast.cpp  ast.h  base_flag.cpp  base_flag.h  bng.h  bng_config.cpp  bng_config.h  bng_data.cpp  bng_data.h  bng_defines.h  bng_engine.cpp  bng_engine.h  bngl_names.h  bngl_parser.y  bngl_scanner.h  bngl_scanner.l  common_defines.h  complex_species.cpp  complex_species.h  component.cpp  component.h  config.h  cplx.cpp  cplx.h  cplx_instance.cpp  cplx_instance.h  cplx_species.cpp  cplx_species.h  defines_shared.cpp  defines_shared.h  elem_mol.cpp  elem_mol.h  elem_mol_type.cpp  elem_mol_type.h  filesystem_include.h  filesystem_utils.cpp  filesystem_utils.h  (+38 more)
libs/nauty/: .gitignore  CMakeLists.txt  MCELL_INFO.txt  NRswitchg.c  addedgeg.c  amtog.c  assembleg.c  biplabg.c  blisstog.c  callgeng.c  catg.c  checks6.c  complg.c  converseg.c  copyg.c  cubhamg.c  deledgeg.c  delptg.c  directg.c  dreadnaut.c  dretodot.c  dretog.c  edgetransg.c  genbg.c  geng.c  genquarticg.c  genrang.c  genspecialg.c  gentourng.c  gentreeg.c  gtnauty.c  gtools.c  gtools.h  gutil1.c  gutil2.c  gutils.h  hamheuristic.c  labelg.c  linegraphg.c  listg.c  (+54 more)
src/: COPYING  ChangeLog  Changelog.md  DGMakefile  JSON.cpp  Makefile.am  README  api_test.c  api_test.h  arglex.l  argparse.c  argparse.h  argparse.y  ascii_react_output.c  ascii_react_output.h  binary_react_output.c  binary_react_output.h  binary_react_output_state.h  bng_util.cpp  bng_util.h  box.py  c_vector.cpp  c_vector.h  chkpt.c  chkpt.h  circular_buffer.c  circular_buffer.h  code_notes.txt  config-nix.h  config-win.h  config.h.in  configure.ac  configure.in  count_util.c  count_util.h  create_geometry.c  create_geometry.h  create_object.c  create_object.h  create_reaction_output.c  (+191 more)
src/docs/: code_notes.txt  dynamic_geometry.md  dynamic_geometry.txt  grid_util_bary.eps  lr_bar_2D.tex  mem_util.lyx  policy_mol_wall_interaction.odt  suggested_3way_rxn.lyx
src/pymcell_examples/: test_api.py  test_bool.py  test_mcell_neuron_python.py  test_release_list.py  test_release_pattern.py
src/rules_py/: .gitignore  grammar_definition.py  mcell3r.py  mcellr.yaml  mdlr2mdl.py  nfsim_python.py  postprocess_mcell3r.py  read_bngxml.py  read_mdl.py  small_structures.py  split_bngxml.py  write_bngxmle.py  write_mdl.py
src/swigExample/: example.i  example.py  setup.py
src/validate/: mcell2_box_rx.mdl  mcell3_box_rx.mdl  nmj_parameters.mdl  nmj_planar.main.mdl  test.mdl  test_region_release.mdl  unbounded_mmi.mdl  validate_grid_util.c  validate_mem_util.c  validate_react_cond.c  validate_react_trig.c  validate_sched_util.c  volume_output_1.mdl
src4/: CMakeLists.txt  base_event.cpp  base_event.h  bng_data_to_datamodel_converter.cpp  bng_data_to_datamodel_converter.h  bngl_exporter.cpp  bngl_exporter.h  callback_info.cpp  callback_info.h  callback_structs.h  clamp_release_event.cpp  clamp_release_event.h  coding_style.txt  collision_structs.cpp  collision_structs.h  collision_utils.inc  collision_utils.inl  collision_utils_legacy.inc  collision_utils_subparts.inc  collision_utils_subparts.inl  concentration_clamp_release_event.cpp  concentration_clamp_release_event.h  count_buffer.cpp  count_buffer.h  counted_volume_utils.cpp  counted_volume_utils.h  counted_volumes_util.cpp  counted_volumes_util.h  custom_function_call_event.h  datamodel_defines.h  defines.cpp  defines.h  defragmentation_event.cpp  defragmentation_event.h  defragmentationevent.cpp  defragmentationevent.h  diffuse_react_event.cpp  diffuse_react_event.h  diffusion_utils.inc  diffusion_utils.inl  (+100 more)
utils/: CMakeLists.txt  bngl_to_mdl.sh  mcell_checkpoint.py  split_dump.py  struct_to_dump.sh
utils/blender_debug_scripts/: dyn_vertex_check.py
utils/bng_analyzer/: CMakeLists.txt  bng_analyzer.cpp  nfsim_species_unifier.cpp  nfsim_species_unifier.h
utils/bng_analyzer_py/: CMakeLists.txt  bng_analysis_example.py  viz_reader.py
utils/plotter/: plotter.py
(+709 files in other folders)
